Cross browser compatability styles added (had to add align-items: flex-start to prevent the default flex grow in safari that made the img get out of its container

--- a/styles/components/FormSuccess.module.scss
+++ b/styles/components/FormSuccess.module.scss
@@ -75,6 +75,7 @@
     .imgContainer {
       display: grid;
       display: -ms-grid;
+      align-items: flex-start;
       height: 100%;
 
       img {
